2013-07-22 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed erroneous registration of error messages, resolves #49383
	* Corrected handling of limitless execution time for ExtJS calls, resolves #43941

2013-01-24 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.0

2013-01-23  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to tap reference nodes directly in XML, resolves #30015

2013-01-18  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensured compatibility with TYPO3 CMS 6.0, resolves #44303

2012-11-01  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Restored usage of time limit in AJAX timeout definition, resolves #42326 (thanks to Andreas Kiessling)
	* Released version 2.0.4

2012-07-20  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected case error in CSS reference for BE module, resolves #39117
	* Corrected error with hook names in the manual, resolves #33196
	* Released version 2.0.3

2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected case error in layout reference for BE module, resolves #38385
	* Released version 2.0.2

2012-06-15  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.0.1 (with missing updated manual)
	* Released version 2.0.0

2012-06-09  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for custom data handlers, resolves #29196

2012-06-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added support for namespaces in XML handling, resolves #30779

2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added check to avoid overwriting imported records' pid, references #31787 (thanks to Ian)
	* Added check to use only records with non-empty external references in mapping, resolves #31787 (thanks to Ian)

2012-05-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used SwiftMailer for reporting mail, resolves #13711

2012-05-21  Francois Suter (Cobweb)  <typo3@cobweb.ch>
